--- a/index.css
+++ b/index.css
@@ -27,6 +27,8 @@ body{
 a
 {
     text-decoration: none;
+    cursor: pointer;
+    color: black;
 }
 h1
 {
@@ -56,7 +58,7 @@ h1
     padding: 8px;
     justify-content: center;
     border-radius: 10px;
-    background-color: rgb(14, 14, 226);
+    background-color: rgb(138, 43, 226);
     border: none;
 }
 .image
@@ -64,4 +66,28 @@ h1
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.container
+{
+    margin: 20px;
+    justify-content: center;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 10px;
+    padding: 20px;
+    width: 100px;
+    height: 100px;
+    align-items: center;
+    
+}
+.logo
+{
+    width: 75px;
+    height: 75px;
+}
+.languages
+{
+    display:flex;
+    align-items: center;
+    justify-content: center;
 }
