--- a/index.css
+++ b/index.css
@@ -1,26 +1,28 @@
 body{
-    background-color: #00203FFF;
-    color: azure;
+    background-color: #195190;
+    color: #A2A2A1;
 }
 .navbar
 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0;
+    padding: 5px;
     margin: 0;
     overflow: hidden;
     position: fixed;
     width: 99%;
-    background-color: rgb(84, 133, 111);
+    background-color: #A2A2A1;
 }
 .skillbar
 {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10px;
-    background-color: rgb(84, 133, 111);
+    padding: 5px;
+    border-radius: 50px;
+    color: #195190;
+    background-color: #A2A2A1;
 }
 
 
@@ -34,7 +36,7 @@ a
 {
     text-decoration: none;
     cursor: pointer;
-    color: rgb(54, 212, 202);
+    color: #195190;
 }
 .pimg
 {
@@ -63,7 +65,7 @@ h1
 .name
 {
     text-shadow: 2px 2px 2px;
-    color: rgb(172, 137, 30);
+    color: rgb(187, 46, 48);;
 }
 .buttons
 {
@@ -76,7 +78,7 @@ h1
     padding: 8px;
     justify-content: center;
     border-radius: 10px;
-    background-color: rgb(84, 133, 111);
+    background-color: #A2A2A1;
     border: none;
 }
 .topic
@@ -113,3 +115,17 @@ h1
     align-items: center;
     justify-content: center;
 }
+footer
+{
+    background-color: #A2A2A1;
+    color:#195190;
+    text-align: right;
+    padding: 5px;
+    
+}
+/* .con
+{
+    display: flex;
+    height: 25px;
+    width: 25px;
+} */
